feat: add auth with Firebase
An authentication capability has been added to the application by using
Firebase as backend.

Now the user needs to sign up/login to fetch/create/store the recipes.

To handle the auth logic, new components and services have been created
under auth/

This new logic contains method such as:

- signup, login, logout, autologin and autologout

An interceptor has been added to include the user token to the fetch
and save http requests.

To prevent an unauthenticated user to access to /recpies a guard has
been created also.

This commit contains all the modifications, new files and work to
achieve what is explained above.

--- a/allYouNeedForYourRecipes/src/app/header/header/header.component.html
+++ b/allYouNeedForYourRecipes/src/app/header/header/header.component.html
@@ -17,7 +17,20 @@
     >
       <ul class="nav navbar-nav">
         <li>
-          <a routerLink="/recipes" routerLinkActive="active">Recipes</a>
+          <a
+            routerLink="/recipes"
+            routerLinkActive="active"
+            *ngIf="isAuthenticated"
+            >Recipes</a
+          >
+        </li>
+        <li>
+          <a
+            routerLink="/auth"
+            routerLinkActive="active"
+            *ngIf="!isAuthenticated"
+            >Authenticate</a
+          >
         </li>
         <li>
           <a routerLink="/shopping-list" routerLinkActive="active"
@@ -26,7 +39,16 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <li>
+          <a
+            style="cursor: pointer"
+            class="dropdown-toggle"
+            *ngIf="isAuthenticated"
+            (click)="onLogout()"
+            >Logout</a
+          >
+        </li>
+        <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a style="cursor: pointer" class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
           ></a>
